--- a/PLAYSTATION 4-5/playstation4_3.html
+++ b/PLAYSTATION 4-5/playstation4_3.html
@@ -34,17 +34,17 @@
     
     <div class="contact-tooltip-menu" id="tooltipMenu">
         <div class="tooltip-item" onclick="openWhatsApp()">
-            <span class="tooltip-icon"><img src="/ICONOSGLOBALES/icono-whats.png" alt=""></span>
+            <span class="tooltip-icon"><img src="ICONOSGLOBALES/icono-whats.png" alt=""></span>
             <span class="tooltip-text">WhatsApp</span>
             <div class="tooltip">Chatear por WhatsApp</div>
         </div>
         <div class="tooltip-item" onclick="sendEmail()">
-            <span class="tooltip-icon"><img src="/ICONOSGLOBALES/icono-insta.png" alt=""></span>
+            <span class="tooltip-icon"><img src="ICONOSGLOBALES/icono-insta.png" alt=""></span>
             <span class="tooltip-text">Instagram</span>
             <div class="tooltip">Seguir en Instagram</div>
         </div>
         <div class="tooltip-item" onclick="sendEmail()">
-            <span class="tooltip-icon"><img src="/ICONOSGLOBALES/icono-face.png" alt=""></span>
+            <span class="tooltip-icon"><img src="ICONOSGLOBALES/icono-face.png" alt=""></span>
             <span class="tooltip-text">Facebook</span>
             <div class="tooltip">Seguir en Facebook</div>
         </div>
@@ -54,7 +54,7 @@
 
     <!-- Este es el header -->
     <header class="header1">
-        <img class="Logoinicio" src="/ICONOSGLOBALES/logo 1.png" alt="Logo">
+        <img class="Logoinicio" src="ICONOSGLOBALES/logo 1.png" alt="Logo">
         <h4 class="nombremarca1">BETALAB</h4>
         <h4 class="nombremarca2">GAMES</h4>
         <h4 class="nombremarca3">PY</h4>
