--- a/index.html
+++ b/index.html
@@ -34,17 +34,17 @@
     
     <div class="contact-tooltip-menu" id="tooltipMenu">
         <div class="tooltip-item" onclick="openWhatsApp()">
-            <span class="tooltip-icon"><img src="/ICONOSGLOBALES/icono-whats.png" alt=""></span>
+            <span class="tooltip-icon"><img src="ICONOSGLOBALES/icono-whats.png" alt=""></span>
             <span class="tooltip-text">WhatsApp</span>
             <div class="tooltip">Chatear por WhatsApp</div>
         </div>
         <div class="tooltip-item" onclick="sendEmail()">
-            <span class="tooltip-icon"><img src="/ICONOSGLOBALES/icono-insta.png" alt=""></span>
+            <span class="tooltip-icon"><img src="ICONOSGLOBALES/icono-insta.png" alt=""></span>
             <span class="tooltip-text">Instagram</span>
             <div class="tooltip">Seguir en Instagram</div>
         </div>
         <div class="tooltip-item" onclick="sendEmail()">
-            <span class="tooltip-icon"><img src="/ICONOSGLOBALES/icono-face.png" alt=""></span>
+            <span class="tooltip-icon"><img src="ICONOSGLOBALES/icono-face.png" alt=""></span>
             <span class="tooltip-text">Facebook</span>
             <div class="tooltip">Seguir en Facebook</div>
         </div>
@@ -144,7 +144,7 @@
         <section class="seccion-juegos">
             <article class="juegos">
                 <h4 class="titulo-juego">Fc 26 para PS4-PS5</h4>
-                    <img class="juego" src="INICIO/imagenes/fc 26.jpg" alt="">
+                    <img class="juego" src="imagenes/fc 26.jpg" alt="">
                     <h6 class="precio-ant">500.000 Gs</h6>
                     <h5 class="precio-act">320.000 Gs</h5><button class="btn-compra" onclick="añadirAlCarrito('FC 26 para PS4-PS5')" class="btn-carrito">Añadir al carrito</button>
             </article>
@@ -260,5 +260,4 @@
 <script src="GLOBALE/carrusel.js"></script>
 <script src="GLOBALE/paginacion.js"></script>
 <script src="btn-paginas.js"></script>
-
 </html>
