Fix HTML formatting and structure in playstation 2.htmlmejora

--- a/PLAYSTATION 2/playstation 2.html
+++ b/PLAYSTATION 2/playstation 2.html
@@ -54,7 +54,7 @@
 
     <!-- Este es el header -->
     <header class="header1">
-        <img class="Logoinicio" src="ICONOSGLOBALES/logo 1.png" alt="Logo">
+        <img class="Logoinicio" src="/ICONOSGLOBALES/logo 1.png" alt="Logo">
         <h4 class="nombremarca1">BETALAB</h4>
         <h4 class="nombremarca2">GAMES</h4>
         <h4 class="nombremarca3">PY</h4>
@@ -172,5 +172,6 @@ function comprarJuegoPS2(nombreJuego) {
 <script src="GLOBALE/btn_flotante.js"></script>
 <script src="GLOBALE/comprar.js"></script>
 <script src="GLOBALE/buscador-global.js"></script>
+
 
 </html>
